# cc-switch

./: .gitattributes  .gitignore  IMPLEMENTATION_NOTES.md  package.json  playwright.config.ts  playwright.openwrt.config.ts  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.openwrt-component.config.ts
.github/workflows/: openwrt-release.yml  openwrt-ui-regression.yml
.orchestrator/: STATUS_B.md  STATUS_C.md  STATUS_D.md  STATUS_E.md  STATUS_F.md  STATUS_G.md  STATUS_H0.md  STATUS_H1.md  STATUS_H2.md  STATUS_H3.md  STATUS_H4.md  STATUS_H5.md  STATUS_H6.md  STATUS_H7.md  STATUS_H8.md
cc-switch-shared/: Cargo.toml
cc-switch-shared/src/: app_config.rs  lib.rs  settings.rs
docs/: openwrt-b23-implementation-handoff.md  openwrt-b23-prototype-binding-matrix.md  openwrt-future-rebase-checklist.md  openwrt-phase10-page-style-manual-verification.md  openwrt-phase11-layout-local-verification.md  openwrt-phase12-local-verification.md  openwrt-phase13-surface-state-copy-contract.md  openwrt-phase14-local-verification.md  openwrt-phase15-b23-workspace-contract.md  openwrt-phase17-b24-slice-contract.md  openwrt-phase17-b24-surface-backend-audit.md  openwrt-phase20-ubus-contract.md  openwrt-phase20-ubus-control-path-audit.md  openwrt-phase21-option2-daemon-decoupling-log.md  openwrt-phase22-rebase-completion-status.md  openwrt-phase5-real-bundle-cutover-contract.md  openwrt-phase6-provider-surface-contract.md  openwrt-phase8-runtime-control-manual-verification.md  openwrt-phase9-provider-editor-manual-verification.md  openwrt-shared-provider-ui-contract.md  openwrt-shared-ui-parity-blueprint.md  ui-collaboration-process.md
docs/openwrt-b23-artifacts/: README.md  option-b23-rationale.txt
docs/openwrt-b24-design-reference/: DESIGN_GUIDE.md  README.md  index.html
openwrt/: CLAUDE_DESIGN.md  README.md  build-ipk.sh  prepare-provider-ui-bundle.sh
proxy-daemon/: Cargo.toml  build.rs
proxy-daemon/.cargo/: config.toml
proxy-daemon/src/: app_config.rs  app_store.rs  config.rs  error.rs  main.rs  openclaw_config.rs  openwrt_admin.rs  openwrt_http.rs  prompt.rs  provider.rs  provider_defaults.rs  settings.rs  shared_core.rs  store.rs  version.rs
proxy-daemon/src/services/: mod.rs  skill.rs  webdav_auto_sync.rs
src-tauri/: Cargo.toml  build.rs
src-tauri/src/: lib.rs  (+3 more)
swiftbar/: cc-switch-bar.1m.py  cc-switch-quota.1m.py
tests/: ipkSpaSentinel.test.ts
(+168 files in other folders)
