[package]
name = "proxy-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"

[[bin]]
name = "proxy-daemon"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
# HTTP stack (same versions as parent)
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "client-legacy"] }
hyper-rustls = { version = "0.27", features = ["http1", "tls12", "ring", "webpki-tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
httparse = "1"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
rustls-native-certs = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream", "socks"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.8"
toml_edit = "0.22"
# Utilities
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "2.0"
futures = "0.3"
async-stream = "0.3"
bytes = "1.5"
flate2 = "1"
brotli = "7"
regex = "1.10"
once_cell = "1.21.3"
base64 = "0.22"
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
sha2 = "0.10"
json5 = "0.4"
json-five = "0.3.1"
indexmap = { version = "2", features = ["serde"] }
rust_decimal = "1.33"
serde_yaml = "0.9"
tempfile = "3"
zip = "2.2"
# Database
rusqlite = { version = "0.31", features = ["bundled", "backup", "hooks"] }
# JS runtime (used in proxy)
rquickjs = { version = "0.8", features = ["array-buffer", "classes"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
strip = "symbols"
